# smoothlife.c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/include/: args.h  grid.h
src/lib/: args.c  grid.c
